--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,11 @@
 {
-  "packages": [
-    "packages/*"
-  ],
-  "version": "0.0.0"
+  "version": "independent",
+  "npmClient": "yarn",
+  "packages": ["packages/*"],
+  "command": {
+    "publish": {
+      "message": "chore(release): publish %s",
+      "registry": "https://npm.pkg.github.com"
+    }
+  }
 }
