--- a/lerna.json
+++ b/lerna.json
@@ -4,8 +4,7 @@
   "packages": ["packages/*"],
   "command": {
     "publish": {
-      "message": "chore(release): publish %s",
-      "registry": "https://npm.pkg.github.com"
+      "message": "chore(release): publish %s"
     }
   }
 }
