--- a/lerna.json
+++ b/lerna.json
@@ -4,7 +4,8 @@
   "packages": ["packages/*"],
   "command": {
     "publish": {
-      "message": "chore(release): publish %s"
+      "message": "chore(release): publish",
+      "registry": "https://npm.pkg.github.com"
     }
   }
 }
