--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "description": "",
   "scripts": {
-    "publish": "lerna run tsc && lerna publish",
+    "publish": "lerna run build && lerna publish",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
