remove custom registry

--- a/lerna.json
+++ b/lerna.json
@@ -4,8 +4,7 @@
   "packages": ["packages/*"],
   "command": {
     "publish": {
-      "message": "chore(release): publish",
-      "registry": "https://registry.npmjs.org"
+      "message": "chore(release): publish"
     }
   }
 }
