--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fsuipc.js/api",
-  "version": "0.0.4-alpha.0",
+  "version": "0.0.4",
   "description": "",
   "author": "Carlos Villalobos",
   "homepage": "https://github.com/tcavenezuela/fsuipc.js/tree/master/packages/api#readme",
@@ -28,6 +28,6 @@
     "url": "https://github.com/tcavenezuela/fsuipc.js/issues"
   },
   "dependencies": {
-    "fsuipc.js": "^0.0.2"
+    "fsuipc.js": "^0.0.4"
   }
 }
