--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fsuipc.js",
-  "version": "0.0.4-alpha.0",
+  "version": "0.0.4",
   "description": "",
   "author": "Carlos Villalobos",
   "homepage": "https://github.com/tcavenezuela/fsuipc.js/tree/master/packages/core#readme",
