--- a/lerna.json
+++ b/lerna.json
@@ -1,10 +1,5 @@
 {
   "version": "independent",
   "npmClient": "yarn",
-  "packages": ["packages/*"],
-  "command": {
-    "publish": {
-      "message": "chore(release): publish"
-    }
-  }
+  "packages": ["packages/*"]
 }
