--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "version": "0.0.0",
   "description": "",
   "scripts": {
-    "release": "lerna run build && lerna publish",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "changeset": "changeset",
+    "version-packages": "changeset version",
+    "release": "lerna run build && changeset publish"
   },
   "devDependencies": {
     "@types/node": "^17.0.36",
