--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "devDependencies": {
     "@types/node": "^17.0.36",
     "lerna": "^5.0.0",
-    "typescript": "^4.7.2"
+    "typescript": "^4.7.2",
+    "copyfiles": "^2.4.1"
   },
   "repository": {
     "type": "git",
