--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -35,10 +35,10 @@
   },
   "dependencies": {
     "bindings": "^1.5.0",
-    "nan": "^2.16.0",
-    "copyfiles": "^2.4.1"
+    "nan": "^2.16.0"
   },
   "devDependencies": {
+    "copyfiles": "^2.4.1",
     "ts-node": "^10.8.0",
     "typescript": "^4.7.2"
   }
