--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -10,8 +10,7 @@
     "access": "public"
   },
   "directories": {
-    "lib": "lib",
-    "test": "__tests__"
+    "lib": "lib"
   },
   "files": [
     "lib"
@@ -21,8 +20,7 @@
     "url": "git+https://github.com/tcavenezuela/fsuipc.js.git"
   },
   "scripts": {
-    "build": "tsc",
-    "test": "echo \"Error: run tests from root\" && exit 1"
+    "build": "tsc"
   },
   "bugs": {
     "url": "https://github.com/tcavenezuela/fsuipc.js/issues"
