--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@types/node": "^17.0.36",
     "lerna": "^5.0.0",
     "typescript": "^4.7.2",
-    "copyfiles": "^2.4.1"
+    "copyfiles": "^2.4.1",
+    "tsc-alias": "^1.7.0"
   },
   "repository": {
     "type": "git",
