--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -5,7 +5,8 @@
   "author": "Carlos Villalobos",
   "homepage": "https://github.com/tcavenezuela/fsuipc.js/tree/master/packages/api#readme",
   "license": "MIT",
-  "main": "lib/api.js",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "publishConfig": {
     "access": "public"
   },
@@ -13,19 +14,32 @@
     "lib": "lib"
   },
   "files": [
-    "lib"
+    "lib/**/*.js",
+    "lib/**/*.d.ts"
   ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tcavenezuela/fsuipc.js.git"
   },
   "scripts": {
-    "build": "tsc"
+    "build": "tsc --declaration && yarn post-build",
+    "post-build": "tsc-alias -p tsconfig.json"
   },
   "bugs": {
     "url": "https://github.com/tcavenezuela/fsuipc.js/issues"
   },
+  "peerDependencies": {
+    "fsuipc.js": "^0.0.5",
+    "rxjs": "^7.5.6",
+    "vm2": "^3.9.10"
+  },
   "dependencies": {
-    "fsuipc.js": "^0.0.5"
+    "fsuipc.js": "*",
+    "rxjs": "^7.5.6",
+    "vm2": "^3.9.10"
+  },
+  "devDependencies": {
+    "tsc-alias": "^1.7.0",
+    "typescript": "^4.7.4"
   }
 }
