--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,6 @@
 {
   "version": "independent",
   "npmClient": "yarn",
-  "packages": ["packages/*"]
+  "packages": ["packages/*"],
+  "useWorkspaces": true
 }
