--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "private": "true",
   "version": "0.0.0",
   "description": "",
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "changeset": "changeset",
     "version-packages": "changeset version",
