--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fsuipc.js-monorepo",
   "private": "true",
   "version": "0.0.0",
-  "description": "",
+  "description": "FSUIPC client implementation for NodeJS.",
   "workspaces": [
     "packages/*"
   ],
@@ -13,11 +13,22 @@
     "release": "yarn run build && changeset publish"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.23.1",
     "@types/node": "^17.0.36",
-    "lerna": "^5.0.0",
-    "typescript": "^4.7.2",
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/parser": "^5.33.0",
     "copyfiles": "^2.4.1",
-    "tsc-alias": "^1.7.0"
+    "eslint": "^8.22.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard-with-typescript": "^22.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.4",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.0.0",
+    "lerna": "^5.0.0",
+    "prettier": "^2.7.1",
+    "tsc-alias": "^1.7.0",
+    "typescript": "^4.7.2"
   },
   "repository": {
     "type": "git",
@@ -28,8 +39,5 @@
   "bugs": {
     "url": "https://github.com/tcavenezuela/fsuipc.js/issues"
   },
-  "homepage": "https://github.com/tcavenezuela/fsuipc.js#readme",
-  "dependencies": {
-    "@changesets/cli": "^2.23.1"
-  }
+  "homepage": "https://github.com/tcavenezuela/fsuipc.js#readme"
 }
