--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fsuipc.js/api",
-  "version": "1.1.1",
+  "version": "1.1.2-alpha.0",
   "description": "",
   "homepage": "https://github.com/tcavenezuela/fsuipc.js/tree/master/packages/api#readme",
   "bugs": {
@@ -27,7 +27,7 @@
     "post-build": "tsc-alias -p tsconfig.json"
   },
   "dependencies": {
-    "fsuipc.js": "*",
+    "fsuipc.js": "1.1.3-alpha.0",
     "rxjs": "^7.5.6",
     "vm2": "^3.9.10"
   },
@@ -36,7 +36,7 @@
     "typescript": "^4.7.4"
   },
   "peerDependencies": {
-    "fsuipc.js": "^1.1.1",
+    "fsuipc.js": "^1.1.3-alpha.0",
     "rxjs": "^7.5.6",
     "vm2": "^3.9.10"
   },
