--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -34,15 +34,16 @@
   },
   "dependencies": {
     "bindings": "^1.5.0",
-    "node-addon-api": "^5.0.0"
+    "node-addon-api": "^7.0.0"
   },
   "devDependencies": {
     "copyfiles": "^2.4.1",
     "ts-node": "^10.8.0",
-    "typescript": "^4.7.2"
+    "typescript": "^4.7.2",
+    "@types/node": "^18.0.0"
   },
   "engines": {
-    "node": ">=16.0"
+    "node": ">=18.0"
   },
   "publishConfig": {
     "access": "public"
