--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lerna": "^5.0.0",
     "prettier": "^2.7.1",
     "tsc-alias": "^1.7.0",
-    "typescript": "^4.7.2"
+    "typescript": "^4.7.2",
+    "prebuildify": "^6.0.1"
   }
 }
