fix: fix CI script to find the correct path to prebuild binaries

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,6 +30,7 @@ jobs:
         run: yarn install --ignore-scripts # --ignore-scripts to avoid unwanted crashes during dependency installation.
 
       - name: Build Prebuilt Binaries
+        working-directory: packages/core
         run: yarn prebuildify --napi # Runs the prebuild step to prepare binaries.
 
       - name: Create Release Pull Request or Publish to npm
