--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,7 @@
     "sourceType": "module"
   },
   "rules": {
-    "prettier/prettier": "error"
+    "prettier/prettier": ["warn", { "endOfLine": "auto" }]
   },
   "plugins": ["prettier"]
 }
